# open_dmlib

./: CMakeLists.txt  Makefile  README.md
cmake/: Toolchain-mingw64.cmake
doc/: CMakeLists.txt
src/: CMakeLists.txt  binreloc.c  binreloc.vapi  dblib.vala  dblib_mysql.vala  libdblib.pc.in  libopen_dmlib.pc.in  magick_wand.vapi  open_dmlib.vala  open_dmlib_io.vapi  windows.vapi
tests/: CMakeLists.txt  test_dblib.vala  test_open_dmlib.vala
